--- a/css/styles.css
+++ b/css/styles.css
@@ -35,12 +35,12 @@ button  {
   border-radius: 4px;
   border: solid 1px;
 }
-.darktheme button  {
+#lightbutton  {
   color: black;
   background-color: white;
   border-color: black;
 }
-.lighttheme button {
+#darkbutton {
   color: white;
   background-color: black;
   border-color: white;
