--- a/css/styles.css
+++ b/css/styles.css
@@ -17,6 +17,7 @@ h1  {
   padding-top: 50px;
   padding-bottom: 100px;
   font-weight: bold;
+  font-size: 50px;
 }
 .well {
   border: solid 1px;
@@ -48,4 +49,14 @@ button  {
   color: white;
   background-color: black;
   border-color: white;
+}
+.cardtext {
+  text-align: center;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+#firstanswer  {
+  display: none;
 }
