--- a/css/styles.css
+++ b/css/styles.css
@@ -51,6 +51,7 @@ button  {
   border-color: white;
 }
 .cardtext {
+  font-size: 150%;
   text-align: center;
   position: absolute;
   top: 50%;
@@ -80,4 +81,24 @@ button  {
 }
 #eighthanswer  {
   display: none;
+}
+@media screen and (max-width: 992px) {
+    .cardtext {
+      font-size: 100%;
+    }
+}
+@media screen and (max-width: 768px) {
+    .cardtext {
+      font-size: 350%;
+    }
+}
+@media screen and (max-width: 576px) {
+    .cardtext {
+      font-size: 200%;
+    }
+}
+@media screen and (max-width: 376px) {
+    .cardtext {
+      font-size: 150%;
+    }
 }
