--- a/css/styles.css
+++ b/css/styles.css
@@ -50,7 +50,19 @@ button  {
   background-color: black;
   border-color: white;
 }
+.lighttheme .cardtext {
+  background-color: rgba(255, 255, 255, 0.75);
+  border-color: rgba(255, 255, 255, 0);
+}
+.darktheme .cardtext  {
+  background-color: rgba(0, 0, 0, 0.75);
+  border-color: rgba(0, 0, 0, 0);
+
+}
 .cardtext {
+  border: solid 10px;
+  border-radius: 5px;
+  border-bottom: 0px;
   font-size: 150%;
   text-align: center;
   position: absolute;
